[gd_scene load_steps=5 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://ui/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/LevelTitle.tscn" type="PackedScene" id=3]
[ext_resource path="res://DisplayWithMinimap.tscn" type="PackedScene" id=4]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="globalControls" type="CanvasLayer" parent="."]
layer = 128

[node name="PauseMenu" parent="globalControls" instance=ExtResource( 2 )]

[node name="LevelIntro" parent="globalControls" instance=ExtResource( 3 )]

[node name="DisplayWithMinimap" parent="." instance=ExtResource( 4 )]
